Text to speech changed & test improved